# sbfmt

./: .gitignore  meson.build  readme
examples/: read_example.c  write_example.c
include/: meson.build  sbfmt.h
src/: sbfmt.c
